fix: add arlac77/system-dashboard-frontend

--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
   },
   "template": {
     "usedBy": [
-      "arlac77/svelte-playground"
+      "arlac77/svelte-playground",
+      "arlac77/system-dashboard-frontend"
     ]
   }
 }
