chore: disable template files

--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
       "arlac77/svelte-playground",
       "arlac77/system-dashboard-frontend"
     ],
-    "files": [
+    "_files": [
       {
         "merger": "Readme",
         "pattern": "README.md",
