--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "{{name}}",
   "description": "{{description}}",
+  "base" : "/services/{{name}}",
   "version": "0.0.0-semantic-release",
   "devDependencies": {
     "browser-sync": "^2.26.7",
@@ -11,10 +12,11 @@
     "postcss-import": "^12.0.1",
     "rollup": "^1.16.4",
     "rollup-plugin-commonjs": "^10.0.1",
+    "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-svelte": "^5.1.0",
     "rollup-plugin-terser": "^5.1.0",
-    "svelte": "^3.6.3",
+    "svelte": "^3.6.4",
     "svelte-easyroute-rollup": "^1.0.0",
     "svelte-preprocess": "^2.14.3",
     "npm-pkgbuild": "^6.5.5",
@@ -51,7 +53,7 @@
       "/etc/nginx/config.d/${name}.conf": "pacman/nginx.conf"
     },
     "depends": {
-      "systemd": ">=241.0",
+      "systemd": ">=242.32",
       "nginx-mainline": ">=1.17.1"
     }
   },
