--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "{{name}}",
   "description": "{{description}}",
   "version": "0.0.0-semantic-release",
+  "dependencies": {
+    "mf-styling": "git+https://github.com/arlac77/mf-styling.git"
+  },
   "devDependencies": {
     "browser-sync": "^2.26.7",
     "connect-history-api-fallback": "^1.6.0",
@@ -11,6 +14,7 @@
     "postcss-import": "^12.0.1",
     "rollup": "^1.20.1",
     "rollup-plugin-commonjs": "^10.0.2",
+    "rollup-plugin-copy": "^3.1.0",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-svelte": "^5.1.0",
@@ -56,7 +60,7 @@
       "/etc/nginx/config.d/${name}.conf": "pacman/nginx.conf"
     },
     "depends": {
-      "systemd": ">=242.32",
+      "systemd": ">=242.84",
       "nginx-mainline": ">=1.17.3"
     }
   },
