--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "postcss": "--delete--",
     "postcss-import": "--delete--",
     "svelte-preprocess": "--delete--",
-    "light-server": "^2.6.3",
+    "light-server": "git+https://github.com/arlac77/light-server.git",
     "rollup": "^1.20.3",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-copy": "^3.1.0",
