--- a/package.json
+++ b/package.json
@@ -41,8 +41,7 @@
   "config": {
     "base": "/services/{{name}}/",
     "api": "/services/{{name}}/api",
-    "proxyTarget": "https://somewhere/",
-    "urlPrefix": "--delete--"
+    "proxyTarget": "https://somewhere/"
   },
   "pacman": {
     "groups": "{{group}}",
