--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
   },
   "license": "BSD-2-Clause",
   "devDependencies": {
+    "rollup-plugin-json": "--delete--",
+
     "rollup": "^1.27.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-copy": "^3.1.0",
     "rollup-plugin-dev": "^1.0.0",
-    "rollup-plugin-json": "^4.0.0",
+    "@rollup/plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-svelte": "^5.1.1",
     "rollup-plugin-terser": "^5.1.2",
