--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "files": [
       {
         "merger": "Readme",
+        "pattern": "README.md",
         "options": {
           "badges": [
             {
