--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "@rollup/plugin-node-resolve": "^6.0.0",
     "rollup-plugin-svelte": "^5.1.1",
     "rollup-plugin-terser": "^5.1.2",
-    "svelte": "^3.16.1",
+    "svelte": "^3.16.3",
     "npm-pkgbuild": "^6.10.14",
     "semantic-release": "^15.13.31",
-    "@semantic-release/exec": "^3.3.8"
+    "@semantic-release/exec": "^3.3.8",
+    "acorn-class-fields": "https://github.com/arlac77/acorn-class-fields.git"
   },
   "scripts": {
     "prepare": "rollup -c",
