--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "rollup-plugin-svelte": "^5.1.1",
     "rollup-plugin-terser": "^5.1.3",
     "svelte": "^3.16.4",
-    "npm-pkgbuild": "^6.11.0",
+    "npm-gkpbuild": "^6.11.1",
     "semantic-release": "^15.13.31",
     "@semantic-release/exec": "^3.3.8"
   },
