--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "license": "BSD-2-Clause",
   "devDependencies": {
+    "npm-gkpbuild": "--delete--",
+
     "rollup": "^1.27.13",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-copy": "^3.1.0",
