--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "license": "BSD-2-Clause",
   "devDependencies": {
     "npm-gkpbuild": "--delete--",
+    "rollup-plugin-commonjs": "--delete--",
 
-    "rollup": "^1.27.13",
-    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup": "^1.27.14",
+
     "rollup-plugin-copy": "^3.1.0",
     "rollup-plugin-dev": "^1.1.1",
     "rollup-plugin-consts": "^1.0.1",
     "@rollup/plugin-node-resolve": "^6.0.0",
+    "@rollup/plugin-commonjs": "^11.0.0",
     "rollup-plugin-svelte": "^5.1.1",
     "rollup-plugin-terser": "^5.1.3",
     "svelte": "^3.16.5",
