--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "rollup-plugin-svelte": "^5.1.1",
     "rollup-plugin-terser": "^5.1.3",
     "svelte": "^3.16.7",
-    "npm-pkgbuild": "^6.11.3",
     "semantic-release": "^15.14.0",
     "@semantic-release/exec": "^3.3.8"
   },
@@ -66,7 +65,8 @@
     "inheritFrom": [
       "arlac77/npm-package-template",
       "arlac77/npm-package-template-travis",
-      "arlac77/npm-package-template-rollup"
+      "arlac77/npm-package-template-rollup",
+      "arlac77/npm-package-template-pacman"
     ],
     "usedBy": [
       "arlac77/entitlement-provider-frontend",
