--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "rollup-plugin-svelte": "^5.1.1",
     "rollup-plugin-terser": "^5.1.3",
     "svelte": "^3.16.7",
-    "semantic-release": "^15.14.0",
-    "@semantic-release/exec": "^3.3.8"
+    "semantic-release": "^15.14.0"
   },
   "scripts": {
     "prepare": "rollup -c",
