--- a/package.json
+++ b/package.json
@@ -70,6 +70,9 @@
             }
           ]
         }
+      },{
+        "merger": "JSONMerger",
+        "pattern": "manifest.json"
       }
     ]
   }
