--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,9 @@
 {
   "name": "{{name}}",
   "description": "{{description}}",
+  "start_url": "/index.html",
+  "display": "standalone",
+  "orientation": "portrait",
   "icons": [
     {
       "src": "facicon.ico",
