--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "prepare": "rollup -c",
     "start": "rollup -c -w"
   },
+  "engines": {
+   "node": ">=13.8.0"
+  },
   "release": {
     "plugins": [
       [
