--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "mf-styling": "arlac77/mf-styling",
     "svelte-common": "^1.3.0",
-    "svelte-guard-history-router": "^1.1.13",
+    "svelte-guard-history-router": "^1.1.14",
     "svelte-session-manager": "^1.0.7"
   },
   "devDependencies": {
@@ -18,9 +18,6 @@
   "scripts": {
     "prepare": "rollup -c",
     "start": "rollup -c -w"
-  },
-  "engines": {
-    "node": ">=13.9.0"
   },
   "release": {
     "plugins": [
@@ -79,7 +76,7 @@
       },
       {
         "merger": "JSONMerger",
-        "pattern": "manifest.json"
+        "pattern": "**/manifest.json"
       }
     ]
   }
