fix: do not expand manifest.json

--- a/package.json
+++ b/package.json
@@ -76,7 +76,10 @@
       },
       {
         "merger": "JSONMerger",
-        "pattern": "**/manifest.json"
+        "pattern": "**/manifest.json",
+        "options": {
+          "expand" : false
+        }
       }
     ]
   }
