--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "svelte-session-manager": "^1.0.7"
   },
   "devDependencies": {
-    "rollup-plugin-copy": "^3.3.0",
+    "rollup-plugin-copy": "--delete--",
+
+    "rollup-plugin-postcss": "^2.4.0",
+    "postcss-import": "^12.0.1",
+
     "rollup-plugin-dev": "^1.1.1",
     "rollup-plugin-svelte": "^5.1.1",
     "rollup-plugin-terser": "^5.2.0",
