fix: add arlac77/symatemexplorer

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
       "arlac77/entitlement-provider-frontend",
       "arlac77/hook-ci-frontend-svelte",
       "arlac77/konsum-frontend-svelte",
+      "arlac77/symatemexplorer",
       "arlac77/system-dashboard-frontend"
     ],
     "mergers": [
