fix: add arlac77/SymatemExplorer

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
       "arlac77/template-rollup"
     ],
     "usedBy": [
+      "arlac77/SymatemExplorer",
       "arlac77/entitlement-provider-frontend",
       "arlac77/hook-ci-frontend-svelte",
       "arlac77/konsum-frontend-svelte",
