fix: add arlac77/component-template-designer

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     ],
     "usedBy": [
       "arlac77/SymatemExplorer",
+      "arlac77/component-template-designer",
       "arlac77/entitlement-provider-frontend",
       "arlac77/hook-ci-frontend-svelte",
       "arlac77/konsum-frontend-svelte",
