--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
       "arlac77/entitlement-provider-frontend",
       "arlac77/hook-ci-frontend-svelte",
       "arlac77/konsum-frontend-svelte",
+      "arlac77/npm-navigator",
       "arlac77/symatemexplorer",
       "arlac77/system-dashboard-frontend"
     ]
