fix: add rollup config

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "svelte-common": "^2.1.6",
+    "svelte-common": "^2.1.7",
     "svelte-guard-history-router": "^2.24.0",
     "svelte-session-manager": "^1.1.7"
   },
@@ -9,8 +9,8 @@
     "postcss-import": "^12.0.1"
   },
   "scripts": {
-    "prepare": "rollup -c",
-    "start": "rollup -c -w"
+    "prepare": "rollup -c {{rollup.config}}",
+    "start": "rollup -c -w {{rollup.config}}"
   },
   "config": {
     "api": "/services/{{name}}/api",
