--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
       "arlac77/SymatemExplorer",
       "arlac77/component-template-designer",
       "arlac77/entitlement-provider-frontend",
-      "arlac77/hook-ci-frontend-svelte",
+      "arlac77/hook-ci-frontend-svelte#next",
       "arlac77/konsum-frontend-svelte",
       "arlac77/npm-navigator",
       "arlac77/system-dashboard-frontend"
