--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "devDependencies": {
     "rollup-plugin-postcss": "^3.1.8",
     "rollup-plugin-livereload": "^2.0.0",
-    "postcss-import": "^12.0.1"
+    "postcss-import": "12.0.1"
   },
   "scripts": {
     "prepare": "rollup -c {{rollup.config}}",
