fix: declare netlifly.pubish

--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "properties": {
       "rollup": {
         "config": ""
+      },
+      "netlify": {
+        "publish": "publish/"
       }
     },
     "inheritFrom": [
