--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "config": ""
       },
       "netlify": {
-        "publish": "publish/"
+        "publish": "public/"
       }
     },
     "inheritFrom": [
