fix: add arlac77/sync-test-repository

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
       "arlac77/hook-ci-frontend-svelte#next",
       "arlac77/konsum-frontend-svelte",
       "arlac77/npm-navigator",
+      "arlac77/sync-test-repository",
       "arlac77/system-dashboard-frontend"
     ]
   }
