--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
     "svelte-session-manager": "^1.3.1"
   },
   "devDependencies": {
-    "rollup-plugin-postcss": "^3.1.8",
-    "rollup-plugin-livereload": "^2.0.0",
-    "postcss-import": "12.0.1"
+    "rollup-plugin-livereload": "^2.0.0"
   },
   "scripts": {
     "prepare": "rollup -c {{rollup.config}}",
