--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
       "arlac77/entitlement-provider-frontend",
       "arlac77/hook-ci-frontend-svelte#next",
       "arlac77/npm-navigator",
-      "arlac77/system-dashboard-frontend"
+      "arlac77/system-dashboard-frontend",
+      "konsumation/konsum-frontend-svelte"
     ]
   }
 }
