--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "title": "Appliction Name"
   },
   "template": {
+    "property": {
+    	"web-app": {
+    		"publish" : "build"
+    	}
+    },
     "inheritFrom": [
       "arlac77/template-web-app#next",
       "arlac77/template-svelte#next"
