chore(deps): remove --delete-- (devDependencies.rollup-plugin-livereload) chore(deps): add ^14.8.1 (devDependencies.stylelint) chore(deps): add ^25.0.0 (devDependencies.stylelint-config-standard) chore(deps): add ^10.0.3 (devDependencies.npm-pkgbuild) chore(deps): add ^6.0.3 (devDependencies.@semantic-release/exec) chore(deps): add ^9.0.2 (devDependencies.@semantic-release/commit-analyzer) chore(deps): add ^10.0.3 (devDependencies.@semantic-release/release-notes-generator) chore(deps): add ^19.0.2 (devDependencies.semantic-release) chore(deps): add ^3.48.0 (devDependencies.svelte) chore(deps): add ^2.9.6 (devDependencies.vite) chore(scripts): remove --delete-- (scripts.build) chore(scripts): add vite build (scripts.prepare) chore(scripts): add npm run lint:css (scripts.lint) chore(scripts): add stylelint ./src/*.css (scripts.lint:css) chore(scripts): add vite (scripts.dev) chore(scripts): add vite preview (scripts.serve) chore(package): add template for svelte / rollup applications (description) chore(package): add 0.0.0-semantic-release (version) chore(package): (config) chore(package): (pkgbuild) chore(package): (release) chore(package): (repository) chore(package): (bugs) chore(package): add https://github.com/arlac77/template-svelte-app#readme (homepage) docs(package): (keywords)

--- a/package.json
+++ b/package.json
@@ -1,17 +1,75 @@
 {
+  "name": "template-svelte-app",
+  "version": "0.0.0-semantic-release",
+  "description": "template for svelte / rollup applications",
+  "keywords": [
+    "web",
+    "svelte",
+    "vite"
+  ],
+  "scripts": {
+    "prepare": "vite build",
+    "start": "vite",
+    "lint": "npm run lint:css",
+    "lint:css": "stylelint ./src/*.css",
+    "dev": "vite",
+    "serve": "vite preview"
+  },
   "dependencies": {
     "svelte-common": "^4.4.20",
     "svelte-guard-history-router": "^4.5.2",
     "svelte-session-manager": "^2.0.10"
   },
   "devDependencies": {
-    "rollup-plugin-livereload": "--delete--",
-    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.42"
+    "@semantic-release/commit-analyzer": "^9.0.2",
+    "@semantic-release/exec": "^6.0.3",
+    "@semantic-release/release-notes-generator": "^10.0.3",
+    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.42",
+    "npm-pkgbuild": "^10.0.3",
+    "semantic-release": "^19.0.2",
+    "stylelint": "^14.8.1",
+    "stylelint-config-standard": "^25.0.0",
+    "svelte": "^3.48.0",
+    "vite": "^2.9.6"
   },
-  "scripts": {
-    "build": "--delete--",
-    "prepare": "--overwrite-- vite build",
-    "start": "vite"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/arlac77/template-svelte-app.git"
+  },
+  "bugs": {
+    "url": "https://github.com/arlac77/template-svelte-app/issues"
+  },
+  "homepage": "https://github.com/arlac77/template-svelte-app#readme",
+  "config": {
+    "base": "/services/{{name}}"
+  },
+  "pkgbuild": {
+    "groups": "web",
+    "content": {
+      "${install.dir}": {
+        "base": "public/"
+      },
+      "${nginx.sites.dir}${name}.conf": "pkg/nginx.conf"
+    },
+    "install.dir": "/services/{{name}}/frontend/",
+    "hooks": "pkg/hooks.sh",
+    "depends": {
+      "nginx-mainline": ">=1.21.4"
+    }
+  },
+  "release": {
+    "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
+      "@semantic-release/npm",
+      [
+        "@semantic-release/exec",
+        {
+          "publishCmd": "npx npm-pkgbuild --verbose"
+        }
+      ],
+      "@semantic-release/github"
+    ]
   },
   "template": {
     "property": {
