--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "@semantic-release/commit-analyzer": "^9.0.2",
     "@semantic-release/exec": "^6.0.3",
     "@semantic-release/release-notes-generator": "^10.0.3",
-    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.43",
-    "npm-pkgbuild": "^10.4.0",
+    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.44",
+    "npm-pkgbuild": "^10.5.0",
     "semantic-release": "^19.0.2",
     "stylelint": "^14.8.2",
     "stylelint-config-standard": "^25.0.0",
@@ -66,6 +66,12 @@
         "@semantic-release/exec",
         {
           "publishCmd": "npx npm-pkgbuild --verbose"
+        }
+      ],
+      [
+        "@semantic-release/exec",
+        {
+          "publishCmd": "npx npm-pkgbuild --available --verbose"
         }
       ],
       "@semantic-release/github"
