--- a/package.json
+++ b/package.json
@@ -1,7 +1,4 @@
 {
-  "name": "template-svelte-app",
-  "version": "0.0.0-semantic-release",
-  "description": "template for svelte / rollup applications",
   "keywords": [
     "svelte",
     "vite",
@@ -21,14 +18,7 @@
     "svelte-session-manager": "^2.0.10"
   },
   "devDependencies": {
-    "@semantic-release/commit-analyzer": "^9.0.2",
-    "@semantic-release/exec": "^6.0.3",
-    "@semantic-release/release-notes-generator": "^10.0.3",
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.44",
-    "npm-pkgbuild": "^10.7.5",
-    "semantic-release": "^19.0.2",
-    "stylelint": "^14.8.2",
-    "stylelint-config-standard": "^25.0.0",
     "svelte": "^3.48.0",
     "vite": "^2.9.9"
   },
@@ -51,31 +41,7 @@
       "${nginx.sites.dir}${name}.conf": "pkg/nginx.conf"
     },
     "hooks": "pkg/hooks.sh",
-    "groups": "web",
-    "depends": {
-      "nginx-mainline": ">=1.21.4"
-    },
-    "install.dir": "/services/template-svelte-app/frontend/"
-  },
-  "release": {
-    "plugins": [
-      "@semantic-release/commit-analyzer",
-      "@semantic-release/release-notes-generator",
-      "@semantic-release/npm",
-      [
-        "@semantic-release/exec",
-        {
-          "publishCmd": "npx npm-pkgbuild --verbose"
-        }
-      ],
-      [
-        "@semantic-release/exec",
-        {
-          "publishCmd": "npx npm-pkgbuild --available --verbose"
-        }
-      ],
-      "@semantic-release/github"
-    ]
+    "groups": "web"
   },
   "template": {
     "property": {
@@ -86,14 +52,6 @@
     "inheritFrom": [
       "arlac77/template-web-app",
       "arlac77/template-svelte#next"
-    ],
-    "disabled-usedBy": [
-      "konsumation/konsum-frontend-svelte",
-      "arlac77/npm-navigator",
-      "arlac77/hook-ci-frontend-svelte",
-      "arlac77/component-template-designer",
-      "arlac77/entitlement-provider-frontend",
-      "arlac77/system-dashboard-frontend"
     ]
   }
 }
