fix: add usedBy

--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
         "publish": "build"
       }
     },
+    "usedBy": [
+      "konsumation/konsum-frontend-svelte"
+    ],
     "inheritFrom": [
       "arlac77/template-web-app",
       "arlac77/template-svelte#next",
