fix: add arlac77/entitlement-provider-frontend

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
       }
     },
     "usedBy": [
+      "arlac77/entitlement-provider-frontend",
       "konsumation/konsum-frontend-svelte"
     ],
     "inheritFrom": [
